# mnemosyne

./: .clinerules  .gitignore  LICENSE  README.md  README.md.updates  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/sessions/: 70c25471-a6a9-4051-b90c-e8a276c635e4.json
backend/src/api/: devices.py  main.py  main.py.bak  session.py
backend/src/audio/: capture.py  helpers.py  transcriber.py  transcriber.py.bak
backend/src/llm/: summarizer.py
backend/src/mnemosyne/: config.py
backend/src/mnemosyne/api/: app.py  websocket.py
backend/src/mnemosyne/api/routes/: audio.py  devices.py  export.py  models.py  sessions.py
backend/src/mnemosyne/audio/: capture.py  mixer.py
backend/src/mnemosyne/export/: obsidian.py  templates.py
backend/src/mnemosyne/models/: session.py  transcript.py
backend/src/mnemosyne/services/: model_service.py  session_service.py  summarization_service.py
backend/src/mnemosyne/summarization/: __init__.py  anthropic_provider.py  ollama.py  openai_provider.py  prompts.py  provider.py  vllm.py
backend/src/mnemosyne/transcription/: engine.py  whisperx_engine.py
backend/src/services/: model_service.py
docs/: api-reference.md  architecture.md  development.md  getting-started.md  troubleshooting.md  usage-examples.md
docs/api/: openapi.yaml
docs/backend/: api.md  llm.md  (+2 more)
frontend/: package-lock.json  package.json  tailwind.config.js
scripts/: build-all.sh  build-backend.sh  dev-backend.sh  package.sh
src-tauri/: Cargo.toml  tauri.conf.json
(+46 files in other folders)
